--- a/mail/elm/doc/Makefile
+++ b/mail/elm/doc/Makefile
@@ -1,13 +1,16 @@
 #
-# : Makefile.SH,v 5.11 1993/04/12 02:12:07 syd Exp $
+# : Makefile.SH,v 1.2 1993/08/27 00:53:55 smace Exp $
 #
 #  Makefile for the documentation of the ELM mail system
 #
 #         (C) Copyright 1988-1992, USENET Community Trust
 #
 #  $Log: Makefile,v $
-#  Revision 1.3  1993/08/27 00:53:54  smace
-#  Upgrade elm2.4 pl23beta elm2.4 pl23beta2
+#  Revision 1.4  1993/08/30 05:39:19  smace
+#  compile only with -traditional
+#
+# Revision 1.2  1993/08/27  00:53:55  smace
+# Upgrade elm2.4 pl23beta elm2.4 pl23beta2
 #
 # Revision 5.11  1993/04/12  02:12:07  syd
 # Added elmalias.1 man page.  Updated Users.guide to mention elmalias.
