added README and changed install directory to /usr/gnu

--- a/devel/gmake/Makefile
+++ b/devel/gmake/Makefile
@@ -73,7 +73,7 @@ LOADLIBES =
 extras =  getloadavg.o
 
 # Common prefix for machine-independent installed files.
-prefix = /usr/local
+prefix = /usr/gnu
 # Common prefix for machine-dependent installed files.
 exec_prefix = $(prefix)
 
