--- a/devel/gmake/Makefile.in
+++ b/devel/gmake/Makefile.in
@@ -72,7 +72,7 @@ LOADLIBES = @LIBS@
 extras = @LIBOBJS@
 
 # Common prefix for machine-independent installed files.
-prefix = /usr/local
+prefix = /usr/gnu
 # Common prefix for machine-dependent installed files.
 exec_prefix = $(prefix)
 
