Changed default install directory to /usr/gnu

--- a/math/octave/octave/Makeconf.in
+++ b/math/octave/octave/Makeconf.in
@@ -67,7 +67,7 @@ version = `$(getversion) $(srcdir)/$(TOPDIR)/src/version.h`
 
 # Common prefix for installation directories.
 # NOTE: This directory must exist when you start installation.
-prefix = /usr/local
+prefix = /usr/gnu
 
 # Directory in which to put host dependent programs and libraries
 exec_prefix = $(prefix)
