applied patches from Rich Murphy and added them to the INSTALL notes (should be renamed README.FreeBSD, probably)

--- a/print/tex/Makefile
+++ b/print/tex/Makefile
@@ -388,7 +388,7 @@ install.dviutils:
 # Cleanup targets
 #
 clean: $(ALL:S/^/clean./g)
-	rm -f *~ #*# a.out *.o stamp-*
+	rm -f *~ \#*\# a.out *.o stamp-*
 	cd ./scripts ; rm -f var.sed modes.mf dvidr.1 dvidr
 	rm -r -f ./usr/*
 
