--- a/devel/gmake/Makefile.in
+++ b/devel/gmake/Makefile.in
@@ -182,7 +182,8 @@ install: installdirs \
 	 $(mandir)/$(instname).$(manext)
 
 installdirs:
-	$(SHELL) ${srcdir}/mkinstalldirs
+	$(SHELL) ${srcdir}/mkinstalldirs $(bindir) $(libdir) \
+		$(includedir) $(infodir) $(mandir)
 
 $(bindir)/$(instname): make
 	$(INSTALL_PROGRAM) make $@.new
