--- a/mail/elm/utils/Makefile
+++ b/mail/elm/utils/Makefile
@@ -12,8 +12,8 @@
 #			dsinc!elm
 #
 # $Log: Makefile,v $
-# Revision 1.4  1993/08/30 05:39:54  smace
-# compile only with -traditional
+# Revision 1.5  1993/09/28 18:58:11  smace
+# Reran elm Configure set to not break on 8 bit chars
 #
 # Revision 1.2  1993/08/27  00:57:13  smace
 # Upgrade elm2.4 pl23beta elm2.4 pl23beta2
