Added package create target. Added ljet3 device. Updated driver for FlexFAX. Spiffed up top-level Makefile.

--- a/x11/ghostscript/Makefile
+++ b/x11/ghostscript/Makefile
@@ -10,12 +10,15 @@ ghostscript:
 
 install: 
 	-mkdir -p ${lib}/fonts
-	cp -R fonts  ${lib}/
+	install -c -o bin -g bin -m 444  fonts/[a-z]* ${lib}/fonts
 	cd gs; \
 	make install
 	-mkdir -p ${prefix}/man/man1
-	cp gs.1 ${prefix}/man/man1/gs.1
+	install -c -o bin -g bin -m 444  gs/gs.1 ${prefix}/man/man1/gs.1
 
 clean:
 	cd gs; \
 	make clean
+
+ghostscript_bin.tgz:
+	pkg_create -v -c bin-desc -d README.FreeBSD -f bin-list ghostscript_bin.tgz
