Added package target.

--- a/math/octave/Makefile
+++ b/math/octave/Makefile
@@ -11,3 +11,7 @@ install: octave
 clean:
 	cd octave-0.74; \
 	gmake clean
+
+package:
+	strip /usr/gnu/bin/octave
+	pkg_create -v -c bin-desc -d README.FreeBSD -f bin-list octave_bin.tgz
