1) Some 'unsigned long's added in this sz/rz version instead of old 'long's and used in expression like (xxx - 1000). Hint: xxx = 0. Fixed back to old good 'long's. 2) Flush stuff for all systems somethimes a bit buggy, fixed. TIOCFLUSH fully added now. Read flush added to all Lleft=0 occurances. 3) There is right TCFLSH usage in old sz version, removed in this version, I restore this stuff in more common form (for all systems). 4) It is impossible to use this version reading from stdin and writing to stdout (in 'tip' or 'cu'), because it directly opens /dev/tty. Fixed. 5) TXBSIZE definition (internal file cache for sending) ommited in Makefile in this version. Restored. 6) Many options missed from interactive help page, added. 7) New -V option included, redirect all logs to stderr

--- a/comm/rzsz/Makefile
+++ b/comm/rzsz/Makefile
@@ -1,7 +1,5 @@
-# Makefile for Unix/Xenix rz and sz programs
 # the makefile is not too well tested yet
-CC=gcc
-CFLAGS+=-O
+CFLAGS=-O2
 LBIN_DIR=/usr/local/bin
 LCAT_DIR=/usr/local/man/cat1
 
@@ -76,7 +74,7 @@ posix:
 	ln rz rb
 	ln rz rx
 	ln rz rc
-	$(CC) $(CFLAGS) -DPOSIX sz.c -o sz
+	$(CC) $(CFLAGS) -DPOSIX -DTXBSIZE=32768 sz.c -o sz
 	size sz
 	-rm -f sb sx zcommand zcommandi
 	ln sz sb
@@ -91,7 +89,7 @@ bsd:
 	ln rz rb
 	ln rz rx
 	ln rz rc
-	$(CC) $(CFLAGS) $(OFLAG) -DV7 -DNFGVMIN sz.c -o sz
+	$(CC) $(CFLAGS) $(OFLAG) -DV7 -DNFGVMIN -DTXBSIZE=32768 sz.c -o sz
 	size sz
 	-rm -f sb sx zcommand zcommandi
 	ln sz sb
@@ -112,7 +110,7 @@ install:
 	install -cs -o bin -m 755 rz rb rx rc $(LBIN_DIR)
 	install -cs -o bin -m 755 sz sb sx zcommand zcommandi $(LBIN_DIR)
 	install -cs -o bin -m 755 crc $(LBIN_DIR)
-	install -cs -o bin -m 755 crc.doc minirb.doc rz.doc sz.doc $(LCAT_DIR)
+	install -c -o bin -m 755 crc.doc minirb.doc rz.doc sz.doc $(LCAT_DIR)
 
 clean:
-	rm -f core rz rb rx rc sz sb sx zcommand zcommandi crc
+	rm -f core* rz rb rx rc sz sb sx zcommand zcommandi crc
