--- a/x11/xview/Makefile
+++ b/x11/xview/Makefile
@@ -9,6 +9,7 @@ World:
 	@echo If you get an error message about to many open files you have
 	@echo to raise your limit, in tcsh: "limit openfiles 200"
 	(cd xview3.2/config; make install)
+	(cd xview3.2; xmkmf)
 	(cd xview3.2; make Makefiles includes all install install.man)
 	(cd xview3.2; make SUBDIRS=clients Makefiles all install install.man)
 	tar cvf - share|(cd /usr/X386; tar xf -)
